August_30/August_30/src/objects/TC_DevopsQuestion__mdt.object
<CustomObject>
    <fields>
        <fullName>Maturity_Level__c</fullName>
        <label>Maturity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baseline</fullName>
                </value>
                <value>
                    <fullName>Beginning</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Mature</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Contextual</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Step 1</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Step 3</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Step 4</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vector1__c</fullName>
        <label>Vector1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vector2__c</fullName>
        <label>Vector2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>TC_DevopsQuestion</label>
    <pluralLabel>TC_DevopsQuestions</pluralLabel>
</CustomObject>